Conversor sin middleware
